--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.8",
+    "handlebars": "^4.0.6",
     "hbs": "~2.7.0",
     "morgan": "~1.3.2",
     "serve-favicon": "~2.1.7"
